--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Juan Francisco Aguirre",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
 }
